# slint-template

./: '  .gitignore  2  Cargo.toml  Makefile  README.md  README.zh-CN.md  build.rs  index.html
.github/workflows/: action.yml  android.yml  linux.yml  linux.yml.bak  macos.yml  macos.yml.bak  web.yml  windows.yml  windows.yml.bak
libs/cutil/: Cargo.toml
libs/cutil/src/: crypto.rs  fs.rs  http.rs  lib.rs  str.rs
libs/sqldb/: Cargo.toml
libs/sqldb/src/: entry.rs  lib.rs
res/values/: styles.xml
script/: init-project.sh  replace-android-icon.sh  replace-android-splash.sh  replace-brand-picture.sh  replace-windows-icon.sh
src/: desktop.rs  lib.rs  version.rs
src/config/: conf.rs  data.rs  mod.rs
src/db/: def.rs  mod.rs
src/logic/: about.rs  clipboard.rs  confirm_dialog.rs  examples.rs  examples_web.rs  mod.rs  popup_action.rs  setting.rs  toast.rs  tr.rs  util.rs
ui/: android-window.slint  appwindow.slint  desktop-window.slint  font.slint  logic.slint  store.slint  theme.slint  util.slint  web-window.slint
ui/base/: about.slint  account-balance.slint  address-book.slint  avatar.slint  badge.slint  banner.slint  blanket.slint  bread-crumb.slint  btn.slint  check-btn.slint  circle-progress.slint  collapse.slint  confirm-dialog.slint  def.slint  dialog.slint  drawer.slint  elevated-btn.slint  example-component.slint  head.slint  help.slint  icon-btn.slint  icons-dialog.slint  label.slint  landing-page.slint  language-dialog.slint  line-input.slint  link.slint  list-tile.slint  loading.slint  log-in.slint  login.slint  mnemonic.slint  news.slint  no-data.slint  no-message.slint  pagination.slint  paragraph.slint  password.slint  pin-codes.slint  popup-action.slint  (+32 more)
ui/panel/: def.slint  footer.slint  panel.slint
ui/panel/bodyer/: home.slint  panel.slint  setting.slint
ui/panel/desktop/: home.slint  panel.slint
ui/panel/desktop/examples/: about.slint  account-balance.slint  address-book.slint  avatar.slint  badge.slint  banner.slint  blanket.slint  brand.slint  bread-crumb.slint  button.slint  center-layout.slint  collapse.slint  dialog.slint  divider.slint  drawer.slint  empty.slint  head.slint  help.slint  input.slint  introducion.slint  label.slint  landing-page.slint  link.slint  list-tile.slint  loading.slint  log-in.slint  mnemonic.slint  news.slint  pagination.slint  paragraph.slint  password.slint  pin-codes.slint  popup-action.slint  progress.slint  rate.slint  record-indicator.slint  reset-password.slint  select.slint  setting.slint  sidebar.slint  (+17 more)
ui/panel/mobile/: footer.slint  home.slint  panel.slint
ui/panel/setting/: def.slint  desktop.slint  mobile.slint
ui/panel/setting/components/: donate.slint  preference.slint  proxy.slint
ui/panel/web/: home.slint  panel.slint
web/: index.html
windows/: version.h
