[package]
name = "sqldb"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
once_cell = "1.0"
tokio = { version = "1.0", features = ["sync"] }
serde = { version = "1.0", features = ["serde_derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
